# noahero

backend/nextjs-abstraxion/: README.md  package-lock.json  package.json
backend/nextjs-abstraxion/src/app/: layout.tsx  page.tsx
contracts/: Cargo.toml  deploy.md  instantiate.txt  wallet.txt
contracts/artifacts/: checksums.txt  xion_nft.wasm
contracts/manager/: Cargo.toml  deploy.txt
contracts/manager/artifacts/: treasury.wasm
contracts/manager/src/: contract.rs  tests.rs
contracts/nft-voucher/: Cargo.toml  NOTICE  instantiate.txt  token-uri.json  wallet.txt
contracts/nft-voucher/artifacts/: checksums.txt  nft_voucher.wasm
contracts/nft-voucher/src/: contract.rs  lib.rs  msg.rs  state.rs  tests.rs
contracts/treasury/: Cargo.toml  deploy.txt  token-uri.json
contracts/treasury/artifacts/: checksums.txt
contracts/treasury/src/: lib.rs  msg.rs  state.rs
web/: package-lock.json  package.json  tailwind.config.js
web/.storybook/: ThemeWrapper.svelte  main.ts  preview.ts
web/docs/: storybook-docs.md
web/docs/references/: README.md  storybook-svelte-csf.md  svelte-docs-llms.txt  svelte-llms-full.txt  svelte5-key-changes.md  sveltekit-docs-llms.txt
web/project.inlang/: project_id
web/src/: app.css  app.d.ts  app.html
web/src/lib/: types.ts
web/src/lib/components/: TesteTailwind.svelte  ThemeToggle.svelte
web/src/lib/contexts/: CompanyContext.ts  UserContext.ts  (+1 more)
web/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
web/src/stories/: Button.stories.svelte  Header.stories.svelte  Page.stories.svelte  TesteTailwind.stories.svelte
(+129 files in other folders)
