[package]
name = "manager"
version = "0.1.0"
edition = "2021"
authors = ["Vinicius Barbieri <vinicius190702@hotmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
library = []

[dependencies]
cosmwasm-std = { version = "2.2.0", features = ["cosmwasm_1_4"] }
cosmwasm-schema = "2.2.0"
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.16"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
serde_json = "1.0"



[dev-dependencies]
cw-multi-test = "2.0.0"

